# release-api-client-python

./: .gitignore  CONTRIBUTING.md  README.md  pyproject.toml
src/com/xebialabs/xlrelease/api/v1/: __init__.py  api_base_task.py  folder_api.py  phase_api.py  release_api.py  release_api_full.py  task_api.py  template_api.py
src/com/xebialabs/xlrelease/domain/: __init__.py  configuration_item.py  phase.py  plan_item.py  plan_items.py  release.py  task.py
src/com/xebialabs/xlrelease/domain/folder/: folder.py
tests/: __init__.py
tests/domain/: release.json  test_configuration_item.py  test_release.py  test_task.py
tests/integration/: conftest.py  test_folder_api.py  test_task_api.py  test_template_api.py
tests/unit/: test_template_api.py
tests/unit/domain/: test_configuration_item.py  test_release.py
